--- a/css/style.scss
+++ b/css/style.scss
@@ -1113,6 +1113,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-button {
+      position: relative;
       width: 326px;
       box-sizing: border-box;
       display: flex;
@@ -1128,10 +1129,11 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-button-input1 {
+      position: relative;
       box-sizing: border-box;
       border-color: rgba(24, 25, 32, .1);
       margin-bottom: 10px;
-      padding: 9px 14px;
+      padding: 9px 69px 9px 14px;
       border-style: solid;
       border-width: 1px;
       transition: all .1s ease-in-out;
@@ -1142,18 +1144,74 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__input1-button {
+      position: absolute;
+      right: 0;
+      bottom: 10px;
+      height: 30px;
+      width: 52px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin: 10px;
+      border: none;
+      font-family: Pragmatica, sans-serif;
+      font-size: 13px;
+      line-height: 20px;
+      font-weight: 500;
+      color: #fff;
+      letter-spacing: 1.5px;
+      text-transform: uppercase;
+      border-radius: 100px;
+      align-items: center;
+      background-color: #2d52da;
+      transition: all .1s ease-in-out;
+      cursor: pointer;
+}
+
+.form-elements__input1-button:hover {
+      background-color: #294bc7;
+}
+
 .form-elements__field-button-input2 {
       box-sizing: border-box;
       border: none;
       border-bottom: 1px solid rgba(24, 25, 32, .1);
       margin-bottom: 10px;
-      padding: 9px 0;
+      padding: 9px 69px 9px 0;
       transition: all .1s ease-in-out;
       cursor: text;
       height: 50px;
       border-radius: 1px;
       font-size: 17px;
       line-height: 25px;
+}
+
+.form-elements__input2-button {
+      position: absolute;
+      right: 0;
+      bottom: 10px;
+      height: 30px;
+      width: 52px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin: 10px;
+      border: none;
+      font-family: Pragmatica, sans-serif;
+      font-size: 13px;
+      line-height: 20px;
+      font-weight: 500;
+      color: #fff;
+      letter-spacing: 1.5px;
+      text-transform: uppercase;
+      border-radius: 100px;
+      align-items: center;
+      background-color: #2d52da;
+      transition: all .1s ease-in-out;
+      cursor: pointer;
+}
+
+.form-elements__input2-button:hover {
+      background-color: #294bc7;
 }
 
 .form-elements__field-button-input1:hover {
@@ -1262,9 +1320,23 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-text-text {
+      position: relative;
+      padding-left: 25px;
       font-size: 14px;
       line-height: 20px;
       color: rgba(24, 25, 32, .5);
+}
+
+.form-elements__field-text-text::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 20px;
+      background-image: url(../img/report.svg);
+      background-size: 20px;
+      opacity: 0.5;
 }
 
 .form-elements__select-style {
@@ -1364,7 +1436,6 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-ordinary-select1 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
@@ -1374,11 +1445,14 @@ input[type="radio"].visually-hidden {
       padding: 9px 50px 9px 15px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 
 }
 
 .form-elements__field-ordinary-select2 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
@@ -1388,6 +1462,10 @@ input[type="radio"].visually-hidden {
       padding: 9px 50px 9px 15px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 }
 
 .form-elements__field-ordinary-select1:hover {
@@ -1399,30 +1477,38 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-icon-select1 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
-      padding: 9px 50px 9px 15px;
+      padding: 9px 50px 9px 50px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/mail-blue.svg) top 10px left 10px no-repeat, url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 }
 
 .form-elements__field-icon-select2 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
       border-color: rgba(24, 25, 32, .1);
       transition: all .1s ease-in-out;
       cursor: pointer;
-      padding: 9px 50px 9px 15px;
+      padding: 9px 50px 9px 50px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/mail-blue.svg) top 10px left 10px no-repeat, url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 }
+
+
 
 .form-elements__field-icon-select1:hover {
       border-color: rgba(24, 25, 32, .2);
@@ -1433,7 +1519,6 @@ input[type="radio"].visually-hidden {
 }
 
 .form-elements__field-blocked-select1 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
@@ -1443,10 +1528,13 @@ input[type="radio"].visually-hidden {
       padding: 9px 50px 9px 15px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 }
 
 .form-elements__field-blocked-select2 {
-      position: relative;
       height: 50px;
       margin-bottom: 10px;
       border-style: solid;
@@ -1456,14 +1544,21 @@ input[type="radio"].visually-hidden {
       padding: 9px 50px 9px 15px;
       font-size: 17px;
       line-height: 25px;
+      background: url(../img/keyboard.svg) top 50% right 10px no-repeat;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
 }
 
-.form-elements__field-blocked-select1:hover {
-      border-color: rgba(24, 25, 32, .2);
+.form-elements__field-blocked-select1:disabled {
+      opacity: .5;
+      cursor: not-allowed;
 }
 
-.form-elements__field-blocked-select2:hover {
-      border-color: rgba(24, 25, 32, .2);
+.form-elements__field-blocked-select2:disabled{
+      opacity: .5;
+      cursor: not-allowed;
+    
 }
 
 .form-elements__button-style {
@@ -3277,7 +3372,7 @@ input[type="radio"].visually-hidden {
       min-height: 50px;
       box-sizing: border-box;
       margin-bottom: 10px;
-      padding: 9px 14px;
+      padding: 9px 40px 9px 14px;
       border: 1px solid rgba(24, 25, 32, .1);
       font-size: 17px;
       line-height: 25px;
@@ -3291,7 +3386,9 @@ input[type="radio"].visually-hidden {
       background-repeat: no-repeat;
 }
 
-
+.map-random__modal-popup-input:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
 
 .map-random__modal-popup-input:focus {
       border-color: rgba(24, 25, 32, .2);
