--- a/css/style.css
+++ b/css/style.css
@@ -3597,8 +3597,6 @@ input[type=radio].visually-hidden {
 }
 
 .more-tariff__container {
-  padding: 0;
-  margin: 0;
   display: flex;
   justify-content: space-between;
 }
@@ -3670,7 +3668,6 @@ input[type=radio].visually-hidden {
   border: 1px solid #2d52da;
   border-radius: 1px;
   transition: all 0.1s ease-in-out;
-  color: #2d52da;
   font-size: 17px;
   line-height: 30px;
   cursor: pointer;
@@ -3682,6 +3679,191 @@ input[type=radio].visually-hidden {
 .more-tariff__free-button:hover,
 .more-tariff__free-button:focus {
   opacity: 0.75;
+}
+
+.more-tariff__premium {
+  width: 326px;
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  box-shadow: 0 5px 20px 0 rgba(24, 25, 32, 0.1);
+  transition: all 0.1s ease-in-out;
+  color: #181920;
+  cursor: pointer;
+}
+
+.more-tariff__premium:hover {
+  box-shadow: 0 15px 30px 0 rgba(24, 25, 32, 0.1);
+  margin-top: -5px;
+}
+
+.more-tariff__premium-header {
+  border-bottom: 1px solid rgba(24, 25, 32, 0.1);
+  margin-bottom: 20px;
+}
+
+.more-tariff__premium-headline {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
+  color: rgba(24, 25, 32, 0.5);
+  font-size: 13px;
+  font-weight: normal;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.more-tariff__premium-price {
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: -1.5px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.more-tariff__premium-notice {
+  margin-bottom: 20px;
+  font-size: 17px;
+  line-height: 25px;
+}
+
+.more-tariff__premium-list {
+  margin-bottom: 20px;
+}
+
+.more-tariff__premium-list-item {
+  position: relative;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-left: 35px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #181920;
+}
+
+.more-tariff__premium-button {
+  padding: 10px 30px;
+  border-radius: 1px;
+  font-size: 17px;
+  line-height: 30px;
+  cursor: pointer;
+  background-color: #2d52da;
+  transition: all 0.1s ease-in-out;
+  color: #fff;
+  font-size: 17px;
+  line-height: 30px;
+}
+
+.more-tariff__premium-button:hover,
+.more-tariff__premium-button:focus {
+  background-color: #294bc7;
+}
+
+.more-tariff__unlimited {
+  width: 326px;
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  box-shadow: 0 5px 20px 0 rgba(24, 25, 32, 0.1);
+  transition: all 0.1s ease-in-out;
+  color: #181920;
+  cursor: pointer;
+}
+
+.more-tariff__unlimited:hover {
+  box-shadow: 0 15px 30px 0 rgba(24, 25, 32, 0.1);
+  margin-top: -5px;
+}
+
+.more-tariff__unlimited-header {
+  border-bottom: 1px solid rgba(24, 25, 32, 0.1);
+  margin-bottom: 20px;
+}
+
+.more-tariff__unlimited-headline {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
+  color: rgba(24, 25, 32, 0.5);
+  font-size: 13px;
+  font-weight: normal;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.more-tariff__unlimited-price {
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: -1.5px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.more-tariff__unlimited-notice {
+  margin-bottom: 20px;
+  font-size: 17px;
+  line-height: 25px;
+}
+
+.more-tariff__unlimited-list {
+  margin-bottom: 20px;
+}
+
+.more-tariff__unlimited-list-item {
+  position: relative;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-left: 35px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #181920;
+}
+
+.more-tariff__unlimited-button {
+  padding: 10px 30px;
+  border-radius: 1px;
+  transition: all 0.1s ease-in-out;
+  font-size: 17px;
+  line-height: 30px;
+  cursor: pointer;
+  background-color: #181920;
+  color: #ffffff;
+  font-size: 17px;
+  line-height: 30px;
+}
+
+.more-tariff__unlimited-button:hover,
+.more-tariff__unlimited-button:focus {
+  opacity: 0.8;
+}
+
+.blocks__more-table-name {
+  padding: 0;
+  margin-bottom: 10px;
+  color: rgba(24, 25, 32, 0.5);
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
+.more-table {
+  width: 1037px;
+}
+
+.more-table__name {
+  width: 1037px;
+  box-sizing: border-box;
+  text-align: start;
+  padding: 15px 14px 14px;
+  clear: both;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  font-size: 20px;
+  line-height: 30px;
+  color: #181920;
 }
 
 /*# sourceMappingURL=style.css.map */
