--- a/css/style.scss
+++ b/css/style.scss
@@ -3647,6 +3647,29 @@ input[type="radio"].visually-hidden {
 .blocks__footer1-wrapper {
       width: 100%;
       background-color: #f3f3f4;
+      padding-top: 40px;
+}
+.footer1__top {
+      width: 1039px; 
+      margin: 0 auto;
+      display: flex;
+}
+.footer1__top-subscribe {
+      width: 296px;
+}
+.footer1__top-column1 {
+      width: 148px;
+      padding: 0 15px;
+      box-sizing: border-box;
+}
+.footer1__top-column2 {
+      width: 237px;
+      padding: 0 15px;
+      box-sizing: border-box;
+}
+.footer1__top-column3 {
+      width: 237px;
+      box-sizing: border-box;
 }
 
 
@@ -3669,14 +3692,6 @@ input[type="radio"].visually-hidden {
       margin-bottom: 40px;
 }
 
-.blocks__more-slider-name {
-      padding: 0;
-      margin-bottom: 10px;
-      color: rgba(24, 25, 32, .5);
-      font-size: 20px;
-      line-height: 30px;
-      font-weight: normal;
-}
 
 .more-slider__slider1 {
       width: 683px;
@@ -3768,14 +3783,6 @@ input[type="radio"].visually-hidden {
       margin-bottom: 40px;
 }
 
-.blocks__more-photo-name {
-      padding: 0;
-      margin-bottom: 10px;
-      color: rgba(24, 25, 32, .5);
-      font-size: 20px;
-      line-height: 30px;
-      font-weight: normal;
-}
 
 .more-photo__wrapper {
       position: relative;
