--- a/css/style.scss
+++ b/css/style.scss
@@ -3649,24 +3649,29 @@ input[type="radio"].visually-hidden {
       background-color: #f3f3f4;
       padding-top: 40px;
 }
+
 .footer1__top {
-      width: 1039px; 
+      width: 1039px;
       margin: 0 auto;
       display: flex;
 }
+
 .footer1__top-subscribe {
       width: 296px;
 }
+
 .footer1__top-column1 {
       width: 148px;
       padding: 0 15px;
       box-sizing: border-box;
 }
+
 .footer1__top-column2 {
       width: 237px;
       padding: 0 15px;
       box-sizing: border-box;
 }
+
 .footer1__top-column3 {
       width: 237px;
       box-sizing: border-box;
@@ -4130,7 +4135,6 @@ input[type="radio"].visually-hidden {
       display: flex;
       flex-direction: column;
       border: 1px solid rgba(24, 25, 32, .1);
-      border-top: none;
 }
 
 .more-table {
@@ -4147,7 +4151,6 @@ input[type="radio"].visually-hidden {
       padding: 15px 14px 14px;
       clear: both;
       border-bottom: 1px solid rgba(24, 25, 32, .1);
-      border-top: 1px solid rgba(24, 25, 32, .1);
       font-size: 20px;
       line-height: 30px;
       color: #181920;
@@ -4164,7 +4167,8 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td1 {
-      width: 86px;
+      width: 55px;
+      padding-right: 15px;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4172,7 +4176,8 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td2 {
-      width: 260px;
+      width: 230px;
+      padding: 0 15px;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4180,7 +4185,9 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td3 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4188,7 +4195,9 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td4 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4196,7 +4205,9 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td5 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4204,7 +4215,9 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__header-td6 {
-      width: 173px;
+      width: 143px;
+      padding-left: 15px;
+      text-align: start;
       color: rgba(24, 25, 32, .5);
       font-size: 13px;
       letter-spacing: 1.5px;
@@ -4228,42 +4241,52 @@ input[type="radio"].visually-hidden {
 }
 
 .more-table__line-td1 {
-      width: 86px;
+      width: 56px;
+      padding-right: 15px;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
 }
 
 .more-table__line-td2 {
-      width: 260px;
+      width: 230px;
+      padding: 0 15px;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
 }
 
 .more-table__line-td3 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
 }
 
 .more-table__line-td4 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
 }
 
 .more-table__line-td5 {
-      width: 173px;
+      width: 143px;
+      padding: 0 15px;
+      text-align: start;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
 }
 
 .more-table__line-td6 {
-      width: 173px;
+      width: 143px;
+      padding-left: 15px;
+      text-align: start;
       color: #181920;
       font-size: 14px;
       line-height: 20px;
